Portfolio copy fixing

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<a href="#warbler" class="display custom-link">Warbler</a>
 			<a href="#estates" class="display custom-link">Strange Estates</a>
 			<a href="#codepen" class="display custom-link">Codepen</a>
-			<a href="#oldSite" class="display custom-link">Strange Industries</a>
+			<a href="#oldPortfolio" class="display custom-link">Strange Industries</a>
 		</div>
 		<div class="portfolio-container">
 			<div class="portfolio-entry" id="thisPage">
@@ -85,7 +85,7 @@
 				</div>
 				<div class="col-r">
 					<p>
-						This site was built in June/July 2020 as a redesign of my <a href="#oldPortfolio">old portfolio site</a>,
+						This site was built in June/July 2020 as a redesign of my <a href="#oldPortfolio">previous portfolio site</a>,
 						sharing the same basic markup but with a dramatically colourful and playful redesign.
 					</p>
 						I documented the redesign on <a href="http://startinmerc.home.blog"  target="_blank" rel="noopener">a blog</a>, something I think I'll continue to do going forward.
@@ -269,7 +269,7 @@
 				</div>
 			</div>
 		
-			<div class="portfolio-entry" id="oldSite">
+			<div class="portfolio-entry" id="oldPortfolio">
 				<div class="col-l">
 					<h3 class="portfolio-entry__title">Strange Industries</h3>
 					<p class="portfolio-entry__tech">
@@ -290,6 +290,9 @@
 						using Git for development and continuous deployment though GitHub.
 					</p>
 					<p class="portfolio-entry__links">
+						<a href="#" target="_blank" rel="noopener">
+							View Site
+						</a>
 						<a href="https://github.com/startinmerc/startinmerc.github.io" target="_blank" rel="noopener">
 							View Source on Github
 						</a>
