Simplify HTML and add divs for empty blocks

--- a/index.html
+++ b/index.html
@@ -347,21 +347,22 @@
 </section>
 
 <footer>
-	<h3>MARTYN STIRK IS A FRONT END WEB DEVELOPER</h3>
-	<ul class="footer-links">
-		<li class="display main-link"><a href="#about">about</a></li>
-		<li class="display main-link"><a href="#portfolio">portfolio</a>
-			<ul>
-				<li class="sub-link">External links:</li>
-				<li class="sub-link"><a href="https://strange-flora.herokuapp.com">strange flora</a></li>
-				<li class="sub-link"><a href="https://startinmerc-warbler-client.herokuapp.com">warbler</a></li>
-				<li class="sub-link"><a href="https://strange-estates.herokuapp.com">strange estates</a></li>
-				<li class="sub-link"><a href="https://codepen.io/startinmerc/">codepen</a></li>
-				<li class="sub-link"><a href="https://startinmerc.github.io.">this site</a></li>
-			</ul>
-		</li>
-		<li class="display main-link"><a href="#contact">contact</a></li>
+	<h3>MARTYN STIRK</h3>
+	<h3>IS A FRONT END</h3>
+	<h3>WEB DEVELOPER</h3>
+	<a class="display main-link" href="#about">about</a>
+	<a class="display main-link" href="#portfolio">portfolio</a>
+	<a class="display main-link" href="#contact">contact</a>
+	<ul class="sub-link-container">
+		<li>External links:</li>
+		<li><a class="sub-link" href="https://strange-flora.herokuapp.com">strange flora</a></li>
+		<li><a class="sub-link" href="https://startinmerc-warbler-client.herokuapp.com">warbler</a></li>
+		<li><a class="sub-link" href="https://strange-estates.herokuapp.com">strange estates</a></li>
+		<li><a class="sub-link" href="https://codepen.io/startinmerc/">codepen</a></li>
 	</ul>
+	<div class="block"></div>
+	<div class="block"></div>
+	<div class="block"></div>
 </footer>
 
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
