--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
 						This site was built in June/July 2020 as a redesign of my <a href="#oldPortfolio">previous portfolio site</a>,
 						sharing the same basic markup but with a dramatically colourful and playful redesign.
 					</p>
-						I documented the redesign on <a href="http://startinmerc.home.blog"  target="_blank" rel="noopener">a blog</a>, something I think I'll continue to do going forward.
-						I found it an incredibly gratifying experience and, combined with Codepen prototyping,
-						 this helped me record my thought process and improve my coding practices.
+					<p>
+						I documented the redesign on <a href="http://startinmerc.home.blog" target="_blank" rel="noopener">a blog</a>,
+						 something I think I'll continue to do going forward. I found it an incredibly gratifying experience and,
+						 combined with Codepen prototyping,	this helped me record my thought process and improve my coding practices.
+					</p>
 					<p>
 						Both the hero and section elements make heavy use of GSAP 3, and their ScrollTrigger plugin in particular.
 						This is most prominent in the hero element where a combination of SplittingJS, ScrollTrigger,
