--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 			<a href="#contact">feel free get in touch with me!</a>
 		</p>
 		<p>
-			If you prefer a more normal look at my work, you can 
+			If you prefer a more condensed look at my portfolio, you can 
 			<a href="https://drive.google.com/file/d/1345QQmaZq6-_Ma4wIBWbVKzjJX5TcucN/view?usp=sharing"
-				target="_blank" rel="noopener">view my CV here</a>
+				target="_blank" rel="noopener">view my CV here.</a>
 		</p>
 	</div>
 </section>
