Add container for header and link grid

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 </section>
 
 <section id="portfolio">
-	<h2 data-splitting>Stuff I've Done!</h2>
-	<div class="section-container">
+	<div class="portfolio-header">
+		<h2 data-splitting>Stuff I've Done!</h2>
 		<div class="button-grid">
 			<a href="#thisPage" class="display custom-link">Portfolio Site</a>
 			<a href="#flora" class="display custom-link">Strange Flora</a>
@@ -72,6 +72,9 @@
 			<a href="#codepen" class="display custom-link">Codepen</a>
 			<a href="#oldPortfolio" class="display custom-link">Strange Industries</a>
 		</div>
+	</div>
+	
+	<div class="section-container">
 		<div class="portfolio-container">
 			<div class="portfolio-entry" id="thisPage">
 				<div class="col-l">
