Move SVG ghost to #hero

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 
 <div id="hero">
 	<h1 data-splitting>MARTYN STIRK IS A FRONT END WEB DEVELOPER</h1>
+	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		viewBox="0 0 139 170" enable-background="new 0 0 140 150" xml:space="preserve">
+		<g id="ghost">
+			<path class="ghost__body-top" d="M19,60C19,26.836,45.836,0,79,0s60,26.836,60,60" />
+			<path class="ghost__body-low"
+				d="M19,120c0,16.568,13.432,30,30,30h60c16.568,0,30-13.432,30-30V60c0-16.568-13.432-30-30-30 H49c-16.568,0-30,13.432-30,30V120z" />
+			<path class="ghost__tail"
+				d="M0,133.5c0,9.113,7.387,16.5,16.5,16.5h32c9.113,0,16.5-7.387,16.5-16.5l0,0 c0-9.113-7.387-16.5-16.5-16.5h-32C7.387,117,0,124.387,0,133.5L0,133.5z" />
+			<ellipse class="ghost__eye" cx="44" cy="55" rx="12.5px" ry="12.5px" />
+			<ellipse class="ghost__eye" cx="79" cy="55" rx="12.5px" ry="12.5px" />
+		</g>
+		<ellipse class="ghost__shadow" cx="75" cy="180" rx="15px" ry="2.5px" />
+	</svg>
 </div>
 
 <section id="about">
@@ -315,19 +328,7 @@
 	<h2 data-splitting>Let's talk!</h2>
 	<div class="section-container">
 		<aside class="aside--left">
-			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-				viewBox="0 0 139 170" enable-background="new 0 0 140 150" xml:space="preserve">
-				<g id="ghost">
-					<path class="ghost__body-top" d="M19,60C19,26.836,45.836,0,79,0s60,26.836,60,60" />
-					<path class="ghost__body-low"
-						d="M19,120c0,16.568,13.432,30,30,30h60c16.568,0,30-13.432,30-30V60c0-16.568-13.432-30-30-30 H49c-16.568,0-30,13.432-30,30V120z" />
-					<path class="ghost__tail"
-						d="M0,133.5c0,9.113,7.387,16.5,16.5,16.5h32c9.113,0,16.5-7.387,16.5-16.5l0,0 c0-9.113-7.387-16.5-16.5-16.5h-32C7.387,117,0,124.387,0,133.5L0,133.5z" />
-					<ellipse class="ghost__eye" cx="84" cy="55" rx="12.5px" ry="12.5px" />
-					<ellipse class="ghost__eye" cx="119" cy="55" rx="12.5px" ry="12.5px" />
-				</g>
-				<ellipse class="ghost__shadow" cx="75" cy="180" rx="15px" ry="2.5px" />
-			</svg>
+			<img src="https://images.unsplash.com/photo-1512125098323-cce1035bf4bf?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&h=200&fit=crop&ixid=eyJhcHBfaWQiOjF9" />
 		</aside>
 		<p>
 			Email me at
