Tidy footer external links

--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
 	<a class="display main-link" href="#contact">contact</a>
 	<ul class="sub-link-container">
 		<li>External links:</li>
-		<li><a class="sub-link" href="https://strange-flora.herokuapp.com">strange flora</a></li>
-		<li><a class="sub-link" href="https://startinmerc-warbler-client.herokuapp.com">warbler</a></li>
-		<li><a class="sub-link" href="https://strange-estates.herokuapp.com">strange estates</a></li>
-		<li><a class="sub-link" href="https://codepen.io/startinmerc/">codepen</a></li>
+		<li><a class="sub-link" href="https://strange-flora.herokuapp.com"  target="_blank" rel="noopener">Strange Flora</a></li>
+		<li><a class="sub-link" href="https://startinmerc-warbler-client.herokuapp.com"  target="_blank" rel="noopener">Warbler</a></li>
+		<li><a class="sub-link" href="https://strange-estates.herokuapp.com"  target="_blank" rel="noopener">Strange Estates</a></li>
+		<li><a class="sub-link" href="https://codepen.io/startinmerc/"  target="_blank" rel="noopener">Codepen</a></li>
 	</ul>
 	<div class="block"></div>
 	<div class="block"></div>
