Change grid button hover to separate class

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 	<div class="portfolio-header">
 		<h2 data-splitting>Stuff I've Done!</h2>
 		<div class="button-grid">
-			<a href="#thisPage" class="display custom-link">Portfolio Site</a>
-			<a href="#flora" class="display custom-link">Strange Flora</a>
-			<a href="#warbler" class="display custom-link">Warbler</a>
-			<a href="#estates" class="display custom-link">Strange Estates</a>
-			<a href="#codepen" class="display custom-link">Codepen</a>
-			<a href="#oldPortfolio" class="display custom-link">Strange Industries</a>
+			<a href="#thisPage" class="display custom-link custom-link--box">Portfolio Site</a>
+			<a href="#flora" class="display custom-link custom-link--box">Strange Flora</a>
+			<a href="#warbler" class="display custom-link custom-link--box">Warbler</a>
+			<a href="#estates" class="display custom-link custom-link--box">Strange Estates</a>
+			<a href="#codepen" class="display custom-link custom-link--box">Codepen</a>
+			<a href="#oldPortfolio" class="display custom-link custom-link--box">Strange Industries</a>
 		</div>
 	</div>
 	
