Add custom hover to portfolio entry headers & make links to live sites

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 		<div class="portfolio-container">
 			<div class="portfolio-entry" id="thisPage">
 				<div class="col-l">
-					<h3 class="portfolio-entry__title">Portfolio Site 2020</h3>
+					<a href="#" class="custom-link custom-link--box portfolio-entry__title">
+						<h3>Portfolio Site 2020</h3>	
+					</a>
 					<p class="portfolio-entry__tech">
 						GSAP / SASS / JavaScript / HTML / Git / Netlify / Codepen
 					</p>
@@ -134,7 +136,10 @@
 
 			<div class="portfolio-entry" id="flora">
 				<div class="col-l">
-					<h3 class="portfolio-entry__title">Strange Flora</h3>
+					<a href="https://strange-flora.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
+					 target="_blank" rel="noopener">
+						<h3>Strange Flora</h3>
+					</a>
 					<p class="portfolio-entry__tech">
 						React / Redux / React-Router / Node / Express / Mongoose / MongoDB Atlas / CSS / Codepen / Heroku / Git
 					</p>
@@ -176,7 +181,10 @@
 		
 			<div class="portfolio-entry" id="warbler">
 				<div class="col-l">
-					<h3 class="portfolio-entry__title">Warbler</h3>
+					<a href="https://startinmerc-warbler-client.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
+						target="_blank" rel="noopener">
+						<h3>Warbler</h3>
+					</a>
 					<p class="portfolio-entry__tech">
 						React / Redux / React-Router / MongoDB Atlas / Mongoose / Express / Node / Bootstrap 4 / Heroku / Git
 					</p>
@@ -213,7 +221,10 @@
 		
 			<div class="portfolio-entry" id="estates">
 				<div class="col-l">
-					<h3 class="portfolio-entry__title">Strange Estates</h3>
+					<a href="https://strange-estates.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
+						target="_blank" rel="noopener">
+						<h3>Strange Estates</h3>
+					</a>
 					<p class="portfolio-entry__tech">
 						Bootstrap 4 / GSAP / Mongoose / MongoDB Atlas / Express / Node / Passport / Heroku / Git
 					</p>
@@ -249,7 +260,10 @@
 		
 			<div class="portfolio-entry" id="codepen">
 				<div class="col-l">
-					<h3 class="portfolio-entry__title">Codepen</h3>
+					<a href="https://codepen.io/startinmerc/" class="custom-link custom-link--box portfolio-entry__title"
+						target="_blank" rel="noopener">
+						<h3>Codepen</h3>
+					</a>
 					<p class="portfolio-entry__tech">
 						GSAP / SASS / API interaction / Anime.js / CSS Animation / JavaScript Animation
 					</p>
@@ -289,7 +303,10 @@
 		
 			<div class="portfolio-entry" id="oldPortfolio">
 				<div class="col-l">
-					<h3 class="portfolio-entry__title">Strange Industries</h3>
+					<a href="https://github.com/startinmerc/startinmerc.github.io" class="custom-link custom-link--box portfolio-entry__title" target="_blank"
+						rel="noopener">
+						<h3>Strange Industries</h3>
+					</a>
 					<p class="portfolio-entry__tech">
 						GSAP / Extensive CSS / JavaScript / Intersection Observer / HTML / Git
 					</p>
