--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			I enjoy creating sites with a sense of character and humour, and I have a special interest in animations and UI powered by JavaScript and CSS.
 		</p>
 		<p>
-			After taking an online full-stack web developer course in 2018, I fell in love with the magic of CSS its power for illustrations and animations.
+			After taking an online full-stack web developer course in 2018, I fell in love with the magic of CSS and its power to create illustrations and animations.
 			I subsequently left my career in bookselling in 2019, and found my calling as a front end web developer, where I can get greative and unleash my true nerd self.
 		</p>
 		<p>
@@ -345,7 +345,7 @@
 	<h2 data-splitting>Let's talk!</h2>
 	<div class="section-container">
 		<aside class="aside--left">
-			<img src="https://images.unsplash.com/photo-1512125098323-cce1035bf4bf?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&h=200&fit=crop&ixid=eyJhcHBfaWQiOjF9" />
+			<img src="https://images.unsplash.com/photo-1512125098323-cce1035bf4bf?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&h=200&fit=crop&ixid=eyJhcHBfaWQiOjF9" alt="" />
 		</aside>
 		<p>
 			Email me at
