Swap portfolio-entries to grid layout

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<div class="section-container">
 		<div class="portfolio-container">
 			<div class="portfolio-entry" id="thisPage">
-				<div class="col-l">
+				<div class="entry-section-1">
 					<a href="#" class="custom-link custom-link--box portfolio-entry__title">
 						<h3>Portfolio Site 2020</h3>	
 					</a>
@@ -101,7 +101,7 @@
 						The site you're on! A colourful redesigned portfolio site with tons of SASS and JavaScript animation.
 					</p>
 				</div>
-				<div class="col-r">
+				<div class="entry-section-2">
 					<p>
 						This site was built in June/July 2020 as a redesign of my <a href="#oldPortfolio">previous portfolio site</a>,
 						sharing the same basic markup but with a dramatically colourful and playful redesign.
@@ -135,7 +135,7 @@
 			</div>
 
 			<div class="portfolio-entry" id="flora">
-				<div class="col-l">
+				<div class="entry-section-1">
 					<a href="https://strange-flora.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
 					 target="_blank" rel="noopener">
 						<h3>Strange Flora</h3>
@@ -148,7 +148,7 @@
 						axios calls.
 					</p>
 				</div>
-				<div class="col-r">
+				<div class="entry-section-2">
 					<p>
 						The front end design is built using a theme developed through Codepen prototyping using CSS root
 						variables and style resets to ensure consistency.
@@ -180,7 +180,7 @@
 			</div>
 		
 			<div class="portfolio-entry" id="warbler">
-				<div class="col-l">
+				<div class="entry-section-1">
 					<a href="https://startinmerc-warbler-client.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
 						target="_blank" rel="noopener">
 						<h3>Warbler</h3>
@@ -193,7 +193,7 @@
 						with Redux handling API calls to a Mongo/Express/Node backend.
 					</p>
 				</div>
-				<div class="col-r">
+				<div class="entry-section-2">
 					<p>
 						The front end is built off Bootstrap, customised to give a synthwave aesthetic.
 					</p>
@@ -220,7 +220,7 @@
 			</div>
 		
 			<div class="portfolio-entry" id="estates">
-				<div class="col-l">
+				<div class="entry-section-1">
 					<a href="https://strange-estates.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
 						target="_blank" rel="noopener">
 						<h3>Strange Estates</h3>
@@ -232,7 +232,7 @@
 						An extensive full stack real estate website with listings, users, admins and comments databases.
 					</p>
 				</div>
-				<div class="col-r">
+				<div class="entry-section-2">
 					<p>
 						The front end is built on Bootstrap in EJS, with colour palette and styling changes. The landing page contains
 						interactive JavaScript GSAP animation, and features are shown/hidden as appropriate for different levels of
@@ -259,7 +259,7 @@
 			</div>
 		
 			<div class="portfolio-entry" id="codepen">
-				<div class="col-l">
+				<div class="entry-section-1">
 					<a href="https://codepen.io/startinmerc/" class="custom-link custom-link--box portfolio-entry__title"
 						target="_blank" rel="noopener">
 						<h3>Codepen</h3>
@@ -271,7 +271,7 @@
 						Small projects, prototyping, and generally a playground for me to try new libraries and preprocessors.
 					</p>
 				</div>
-				<div class="col-r">
+				<div class="entry-section-2">
 					<p>
 						I use Codepen extensively for small projects and development of site components. The ease of integration with
 						libraries & preprocessors make it an ideal playground for me to try new ideas and take part in weekly challenges.
@@ -302,7 +302,7 @@
 			</div>
 		
 			<div class="portfolio-entry" id="oldPortfolio">
-				<div class="col-l">
+				<div class="entry-section-1">
 					<a href="https://github.com/startinmerc/startinmerc.github.io" class="custom-link custom-link--box portfolio-entry__title" target="_blank"
 						rel="noopener">
 						<h3>Strange Industries</h3>
@@ -314,7 +314,7 @@
 						My old personal portfolio site, built using minimal plugins, as I was aiming to build as much as I could myself.
 					</p>
 				</div>
-				<div class="col-r">
+				<div class="entry-section-2">
 					<p>
 						The hero section makes extensive use of the GSAP JavaScript library to run complex CSS and SVG animation.
 						The header title animation is randomly generated, so every page load gives a different sequence of letter animations.
