Change image url

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<h2 data-splitting>Hello!</h2>
 	<div class="section-container">
 		<aside class="aside--right">
-			<img src="https://raw.githubusercontent.com/startinmerc/startinmerc.github.io/master/imgs/helsinki-sm.jpg" alt="Me!"/>
+			<img src="imgs/helsinki-sm.jpg" alt="Me!"/>
 		</aside>
 		<p>
 			I'm Martyn, a front end web developer currently floating between York (UK) and Bergamo (Italy).
