--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 		<div class="portfolio-container">
 			<div class="portfolio-entry" id="thisPage">
 				<div class="entry-section-1">
-					<a href="#" class="custom-link custom-link--box portfolio-entry__title">
+					<a href="https://www.strangeindustries.co.uk/" class="custom-link custom-link--box portfolio-entry__title"
+						 target="_blank" rel="noopener">
 						<h3>Portfolio Site 2020</h3>	
 					</a>
 					<p class="portfolio-entry__tech">
@@ -303,7 +304,7 @@
 		
 			<div class="portfolio-entry" id="oldPortfolio">
 				<div class="entry-section-1">
-					<a href="https://github.com/startinmerc/startinmerc.github.io" class="custom-link custom-link--box portfolio-entry__title" target="_blank"
+					<a href="https://www.strangeindustries.co.uk/portfolio-2019/" class="custom-link custom-link--box portfolio-entry__title" target="_blank"
 						rel="noopener">
 						<h3>Strange Industries</h3>
 					</a>
@@ -325,10 +326,10 @@
 						using Git for development and continuous deployment though GitHub.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="#" target="_blank" rel="noopener">
+						<a href="https://www.strangeindustries.co.uk/portfolio-2019/" target="_blank" rel="noopener">
 							View Site
 						</a>
-						<a href="https://github.com/startinmerc/startinmerc.github.io" target="_blank" rel="noopener">
+						<a href="https://github.com/startinmerc/portfolio-2019" target="_blank" rel="noopener">
 							View Source on Github
 						</a>
 						<a href="https://codepen.io/collection/XqjaGg/" target="_blank" rel="noopener">
