--- a/index.html
+++ b/index.html
@@ -378,11 +378,11 @@
 	<a class="display main-link" href="#portfolio">portfolio</a>
 	<a class="display main-link" href="#contact">contact</a>
 	<ul class="sub-link-container">
-		<li>External links:</li>
-		<li><a class="sub-link" href="https://strange-flora.herokuapp.com"  target="_blank" rel="noopener">Strange Flora</a></li>
-		<li><a class="sub-link" href="https://startinmerc-warbler-client.herokuapp.com"  target="_blank" rel="noopener">Warbler</a></li>
-		<li><a class="sub-link" href="https://strange-estates.herokuapp.com"  target="_blank" rel="noopener">Strange Estates</a></li>
-		<li><a class="sub-link" href="https://codepen.io/startinmerc/"  target="_blank" rel="noopener">Codepen</a></li>
+		<li class="display">External links:</li>
+		<li><a href="https://strange-flora.herokuapp.com"  target="_blank" rel="noopener">Strange Flora</a></li>
+		<li><a href="https://startinmerc-warbler-client.herokuapp.com"  target="_blank" rel="noopener">Warbler</a></li>
+		<li><a href="https://strange-estates.herokuapp.com"  target="_blank" rel="noopener">Strange Estates</a></li>
+		<li><a href="https://codepen.io/startinmerc/"  target="_blank" rel="noopener">Codepen</a></li>
 	</ul>
 	<div class="block"></div>
 	<div class="block"></div>
