Add noreferrer to external links

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<p>
 			If you prefer a more condensed look at my portfolio, you can 
 			<a href="https://drive.google.com/file/d/1345QQmaZq6-_Ma4wIBWbVKzjJX5TcucN/view?usp=sharing"
-				target="_blank" rel="noopener">view my CV here.</a>
+				target="_blank" rel="noopener noreferrer">view my CV here.</a>
 		</p>
 	</div>
 </section>
@@ -92,7 +92,7 @@
 			<div class="portfolio-entry" id="thisPage">
 				<div class="entry-section-1">
 					<a href="https://www.strangeindustries.co.uk/" class="custom-link custom-link--box portfolio-entry__title"
-						 target="_blank" rel="noopener">
+						 target="_blank" rel="noopener noreferrer">
 						<h3>Portfolio Site 2020</h3>	
 					</a>
 					<p class="portfolio-entry__tech">
@@ -108,7 +108,7 @@
 						sharing the same basic markup but with a dramatically colourful and playful redesign.
 					</p>
 					<p>
-						I documented the redesign on <a href="http://startinmerc.home.blog" target="_blank" rel="noopener">a blog</a>,
+						I documented the redesign on <a href="http://startinmerc.home.blog" target="_blank" rel="noopener noreferrer">a blog</a>,
 						 something I think I'll continue to do going forward. I found it an incredibly gratifying experience and,
 						 combined with Codepen prototyping,	this helped me record my thought process and improve my coding practices.
 					</p>
@@ -122,13 +122,13 @@
 						This is my first project developed entirely with SASS, using VSCode and a live compiler for development.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://github.com/startinmerc/portfolio-2020" target="_blank" rel="noopener">
+						<a href="https://github.com/startinmerc/portfolio-2020" target="_blank" rel="noopener noreferrer">
 							View Source on Github
 						</a>
-						<a href="http://startinmerc.home.blog" target="_blank" rel="noopener">
+						<a href="http://startinmerc.home.blog" target="_blank" rel="noopener noreferrer">
 							View Development Blog
 						</a>
-						<a href="https://codepen.io/collection/DwYgGq" target="_blank" rel="noopener">
+						<a href="https://codepen.io/collection/DwYgGq" target="_blank" rel="noopener noreferrer">
 							View	Development Pens on Codepen
 						</a>
 					</p>
@@ -138,7 +138,7 @@
 			<div class="portfolio-entry" id="flora">
 				<div class="entry-section-1">
 					<a href="https://strange-flora.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
-					 target="_blank" rel="noopener">
+					 target="_blank" rel="noopener noreferrer">
 						<h3>Strange Flora</h3>
 					</a>
 					<p class="portfolio-entry__tech">
@@ -160,20 +160,20 @@
 					</p>
 					<p>
 						Initially created while learning React, this site continues to develop as I learn more,
-						 with a list of features in progress in the site's <a href="https://github.com/startinmerc/strange-flora#todo" target="_blank" rel="noopener">repo readme.</a>
+						 with a list of features in progress in the site's <a href="https://github.com/startinmerc/strange-flora#todo" target="_blank" rel="noopener noreferrer">repo readme.</a>
 					</p>
 					<p>
 						As a Strange Industries site, the client is a fictional company.
 						 In this instance, Strange Flora is an eCommerce site selling various plants and potions not recommended for human consumption.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://strange-flora.herokuapp.com/" target="_blank" rel="noopener">
+						<a href="https://strange-flora.herokuapp.com/" target="_blank" rel="noopener noreferrer">
 							Visit Website
 						</a>
-						<a href="https://github.com/startinmerc/strange-fauna" target="_blank" rel="noopener">
+						<a href="https://github.com/startinmerc/strange-fauna" target="_blank" rel="noopener noreferrer">
 							View Source on Github
 						</a>
-						<a href="https://github.com/startinmerc/backend-strange-flora" target="_blank" rel="noopener">
+						<a href="https://github.com/startinmerc/backend-strange-flora" target="_blank" rel="noopener noreferrer">
 							API Source on Github
 						</a>
 					</p>
@@ -183,7 +183,7 @@
 			<div class="portfolio-entry" id="warbler">
 				<div class="entry-section-1">
 					<a href="https://startinmerc-warbler-client.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
-						target="_blank" rel="noopener">
+						target="_blank" rel="noopener noreferrer">
 						<h3>Warbler</h3>
 					</a>
 					<p class="portfolio-entry__tech">
@@ -207,13 +207,13 @@
 						aesthetic changes and plan to keep expanding backend funcitonality based on Twitter's model.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://startinmerc-warbler-client.herokuapp.com/" target="_blank" rel="noopener">
+						<a href="https://startinmerc-warbler-client.herokuapp.com/" target="_blank" rel="noopener noreferrer">
 							Visit Website
 						</a>
-						<a href="https://github.com/startinmerc/warbler-client" target="_blank" rel="noopener">
+						<a href="https://github.com/startinmerc/warbler-client" target="_blank" rel="noopener noreferrer">
 							View Source on Github
 						</a>
-						<a href="https://github.com/startinmerc/warbler-server" target="_blank" rel="noopener">
+						<a href="https://github.com/startinmerc/warbler-server" target="_blank" rel="noopener noreferrer">
 							API Source on Github
 						</a>
 					</p>
@@ -223,7 +223,7 @@
 			<div class="portfolio-entry" id="estates">
 				<div class="entry-section-1">
 					<a href="https://strange-estates.herokuapp.com/" class="custom-link custom-link--box portfolio-entry__title"
-						target="_blank" rel="noopener">
+						target="_blank" rel="noopener noreferrer">
 						<h3>Strange Estates</h3>
 					</a>
 					<p class="portfolio-entry__tech">
@@ -251,9 +251,9 @@
 						Strange Estates is a shady lettings agency with user interactions for listing reviews and administration roles.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://strange-estates.herokuapp.com/" target="_blank" rel="noopener">Visit
+						<a href="https://strange-estates.herokuapp.com/" target="_blank" rel="noopener noreferrer">Visit
 							Website</a>
-						<a href="https://github.com/startinmerc/strange-estates" target="_blank" rel="noopener">View
+						<a href="https://github.com/startinmerc/strange-estates" target="_blank" rel="noopener noreferrer">View
 							Source on Github</a>
 					</p>
 				</div>
@@ -262,7 +262,7 @@
 			<div class="portfolio-entry" id="codepen">
 				<div class="entry-section-1">
 					<a href="https://codepen.io/startinmerc/" class="custom-link custom-link--box portfolio-entry__title"
-						target="_blank" rel="noopener">
+						target="_blank" rel="noopener noreferrer">
 						<h3>Codepen</h3>
 					</a>
 					<p class="portfolio-entry__tech">
@@ -286,16 +286,16 @@
 						JSON & AXIOS requests
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://codepen.io/startinmerc/" target="_blank" rel="noopener">
+						<a href="https://codepen.io/startinmerc/" target="_blank" rel="noopener noreferrer">
 							View Profile
 						</a>
-						<a href="https://codepen.io/collection/AxLZBj/" target="_blank" rel="noopener">
+						<a href="https://codepen.io/collection/AxLZBj/" target="_blank" rel="noopener noreferrer">
 							View Codepen Challenge Collection
 						</a>
-						<a href="https://codepen.io/collection/nMvjxz/" target="_blank" rel="noopener">
+						<a href="https://codepen.io/collection/nMvjxz/" target="_blank" rel="noopener noreferrer">
 							View GSAP Animation Collection
 						</a>
-						<a href="https://codepen.io/startinmerc/collections/public" target="_blank" rel="noopener">
+						<a href="https://codepen.io/startinmerc/collections/public" target="_blank" rel="noopener noreferrer">
 							View All Collections
 						</a>
 					</p>
@@ -305,7 +305,7 @@
 			<div class="portfolio-entry" id="oldPortfolio">
 				<div class="entry-section-1">
 					<a href="https://www.strangeindustries.co.uk/portfolio-2019/" class="custom-link custom-link--box portfolio-entry__title" target="_blank"
-						rel="noopener">
+						rel="noopener noreferrer">
 						<h3>Strange Industries</h3>
 					</a>
 					<p class="portfolio-entry__tech">
@@ -326,13 +326,13 @@
 						using Git for development and continuous deployment though GitHub.
 					</p>
 					<p class="portfolio-entry__links">
-						<a href="https://www.strangeindustries.co.uk/portfolio-2019/" target="_blank" rel="noopener">
+						<a href="https://www.strangeindustries.co.uk/portfolio-2019/" target="_blank" rel="noopener noreferrer">
 							View Site
 						</a>
-						<a href="https://github.com/startinmerc/portfolio-2019" target="_blank" rel="noopener">
+						<a href="https://github.com/startinmerc/portfolio-2019" target="_blank" rel="noopener noreferrer">
 							View Source on Github
 						</a>
-						<a href="https://codepen.io/collection/XqjaGg/" target="_blank" rel="noopener">
+						<a href="https://codepen.io/collection/XqjaGg/" target="_blank" rel="noopener noreferrer">
 							View Development Pens on Codepen
 						</a>
 					</p>
@@ -355,16 +355,16 @@
 		</p>
 		<p>
 			You can find me on
-			<a href="https://github.com/startinmerc" target="_blank" rel="noopener">Github</a>
+			<a href="https://github.com/startinmerc" target="_blank" rel="noopener noreferrer">Github</a>
 			and
 			<a href="https://www.linkedin.com/in/martynstirk/" target="_blank"
-				rel="noopener">LinkedIn</a>.
+				rel="noopener noreferrer">LinkedIn</a>.
 		</p>
 		<p>
 			I'm a fairly regular
-			<a href="https://www.instagram.com/startinmerc/" target="_blank" rel="noopener" class="link--dark">Instagram</a>
+			<a href="https://www.instagram.com/startinmerc/" target="_blank" rel="noopener noreferrer" class="link--dark">Instagram</a>
 			 user, and sometimes throw
-			<a href="https://twitter.com/StarTinMerc" target="_blank" rel="noopener" class="link--dark">Twitter</a>
+			<a href="https://twitter.com/StarTinMerc" target="_blank" rel="noopener noreferrer" class="link--dark">Twitter</a>
 			 a bone, although it's mostly out-of-context remarks on road cycling to be honest.
 		</p>
 	</div>
@@ -379,10 +379,10 @@
 	<a class="display main-link" href="#contact">contact</a>
 	<ul class="sub-link-container">
 		<li class="display">External links:</li>
-		<li><a href="https://strange-flora.herokuapp.com"  target="_blank" rel="noopener">Strange Flora</a></li>
-		<li><a href="https://startinmerc-warbler-client.herokuapp.com"  target="_blank" rel="noopener">Warbler</a></li>
-		<li><a href="https://strange-estates.herokuapp.com"  target="_blank" rel="noopener">Strange Estates</a></li>
-		<li><a href="https://codepen.io/startinmerc/"  target="_blank" rel="noopener">Codepen</a></li>
+		<li><a href="https://strange-flora.herokuapp.com"  target="_blank" rel="noopener noreferrer">Strange Flora</a></li>
+		<li><a href="https://startinmerc-warbler-client.herokuapp.com"  target="_blank" rel="noopener noreferrer">Warbler</a></li>
+		<li><a href="https://strange-estates.herokuapp.com"  target="_blank" rel="noopener noreferrer">Strange Estates</a></li>
+		<li><a href="https://codepen.io/startinmerc/"  target="_blank" rel="noopener noreferrer">Codepen</a></li>
 	</ul>
 	<div class="block"></div>
 	<div class="block"></div>
