Update copy CuZ i GoT a JoB

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 					<img src="imgs/helsinki-sm.jpg" alt="Me!" />
 				</aside>
 				<p>
-					I'm Martyn, a front end web developer currently floating between York
-					(UK) and Bergamo (Italy).
+					I'm Martyn, a junior web developer with Plump, a creative digital agency in York, UK.
 				</p>
 				<p>
 					I like to build fun, responsive & accessible websites with stuff like
@@ -90,11 +89,10 @@
 					greative and unleash my true nerd self.
 				</p>
 				<p>
-					I'm currently looking for front end work, and am willing to relocate
-					both within the UK and Europe.
-					<a href="#portfolio">Take a look below for my most recent projects</a
+					Take a look below at some of my 
+					<a href="#portfolio">recent personal projects</a
 					>, and
-					<a href="#contact">feel free get in touch with me!</a>
+					<a href="#contact">feel free get in touch with me</a>!
 				</p>
 				<p>
 					If you prefer a more condensed look at my portfolio, you can
