Move SF frontend to Netlify

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 					<div class="portfolio-entry" id="flora">
 						<div class="entry-section-1">
 							<a
-								href="https://strange-flora.herokuapp.com/"
+								href="https://strange-flora.netlify.app/"
 								class="custom-link custom-link--box portfolio-entry__title"
 								target="_blank"
 								rel="noopener noreferrer"
@@ -259,7 +259,7 @@
 							</p>
 							<p class="portfolio-entry__links">
 								<a
-									href="https://strange-flora.herokuapp.com/"
+									href="https://strange-flora.netlify.app/"
 									target="_blank"
 									rel="noopener noreferrer"
 								>
