--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 					<img src="imgs/helsinki-sm.jpg" alt="Me!" />
 				</aside>
 				<p>
-					I'm Martyn, a junior web developer with Plump, a creative digital agency in York, UK.
+					I'm Martyn, a web developer with <a href="https://plump.agency/" target="_blank" rel="noopener noreferrer">Plump</a>, a creative digital agency in York, UK.
 				</p>
 				<p>
 					I like to build fun, responsive & accessible websites with stuff like
-					React, Sass, Node, Express and Mongo. I enjoy creating sites with a
+					Vue, Sass, Node, Wagtail and Django. I enjoy creating sites with a
 					sense of character and humour, and I have a special interest in
 					animations and UI powered by JavaScript and CSS.
 				</p>
@@ -90,9 +90,9 @@
 				</p>
 				<p>
 					Take a look below at some of my 
-					<a href="#portfolio">recent personal projects</a
-					>, and
-					<a href="#contact">feel free get in touch with me</a>!
+					<a href="#portfolio">personal projects</a
+					>, and feel free to 
+					<a href="#contact"> get in touch with me</a>, if you like.
 				</p>
 				<p>
 					If you prefer a more condensed look at my portfolio, you can
