Update company name

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<img src="imgs/helsinki-sm.jpg" alt="Me!" />
 				</aside>
 				<p>
-					I'm Martyn, a web developer with <a href="https://plump.agency/" target="_blank" rel="noopener noreferrer">Plump</a>, a creative digital agency in York, UK.
+					I'm Martyn, a web developer with <a href="https://cursive.works/" target="_blank">Cursive</a>, a web design & software development agency in York, UK.
 				</p>
 				<p>
 					I like to build fun, responsive & accessible websites with stuff like
